objects/AFSC__FSLink__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: Storage for original links</description>
    <fields>
        <fullName>AFSC__Domain__c</fullName>
        <label>Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AFSC__Host__c</fullName>
        <label>Host</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AFSC__SHA1__c</fullName>
        <description>DEPRECATED</description>
        <label>DEPRECATED SHA1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__SHA__c</fullName>
        <description>This is the SHA1 formed from the URL, used for identification purposes.</description>
        <externalId>true</externalId>
        <label>SHA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__URL__c</fullName>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>